overflow-x bug fixed and carousel arrow styling issue fixed

--- a/src/components/HeroCarousel/HeroCarousel.css
+++ b/src/components/HeroCarousel/HeroCarousel.css
@@ -21,7 +21,7 @@
   z-index: 1;
 }
 
-.slick-prev:before {
+.heroCarousel > .slick-prev:before {
   font-size: 23px;
   content: "←";
   text-align: center;
@@ -29,36 +29,11 @@
   top: 23px;
   left: 20px;
 }
-.slick-next:before {
+.heroCarousel > .slick-next:before {
   font-size: 23px;
-  content: '→';
+  content: "→";
   text-align: center;
   position: absolute;
   top: 23px;
   left: 20px;
 }
-
-
-
-
-/* .slick-prev:before{ */
-/* background-color: blue !important; */
-/* width: 46px;
-    height: 46px;
-    content: '' !important;
-    position: absolute;
-    top: -11px;
-    left: -31px;
-    background-image: url('http://lorempixel.com/50/50');
-    } */
-
-/* .slick-next:before{ */
-/* background-color: blue !important; */
-/* width: 46px;
-    height: 46px;
-    content: '' !important;
-    position: absolute;
-    top: -11px;
-    left: 0px;
-    background-image: url('http://lorempixel.com/50/50');
-    } */
